# FunctionalCPP-Testing

./: .gitignore  CMakeLists.txt
projects/ErrorHandling/: ErrorHandling.cpp
projects/FirstProject/: FirstProject.cpp
